CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.3-dev

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.


CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------
* Fix bug where a project with no ModificationSet would cause the error message 'Failed to reach dashboard instance : http://localhost:8080/dashboard/buildloop/listener, either the dashboard has not started up or there is a network problem' (CC-766).

cruisecontrol.sh (Binary Release)
----------------------
* Allow JETTY_LOGS to be set by environment varable (CC-872). Patch by Angie Lin

CruiseControlConfig
----------------------
* Restore the ability to have custom PropertiesPlugins.

distributed
----------------------
* Fix bug where DistributedMasterBuilder was not delegating isTimeBuilder() to the nestedBuilder, which meant that forcing a build with only a single time based distributed build would fail. Reported by Spencer Smith

ExecBuilder
----------------------
* Log exceptions coming back from the ScriptRunner.

Maven2Builder
----------------------
* Add new attribute "siteGoal" that are run after the normal "goal", such as publishing a site even if a test fails (CC-877). Submitted by Jene Jasper

Mercurial
----------------------
* Fix bug when author name contains special XML characters (CC-879). Patch by Daniel Kullman

PluginXMLHelper
----------------------
* Fix bugs mapping I to lower case in Turkish locale (CC-871).

StarTeam
----------------------
* Fix problem building because of dependency on PluginRegistryTest by adding the main/test classes to the common.xml classpath (CC-878). Patch by DKelly

TimeBuild
----------------------
* Fix bug where more than 1 day had elapsed since the last build. Reported by Nhat Tran

XcodeBuilder
----------------------
* Fix bug with using nested arguments. XcodeBuilder.Arg was not public.

reporting jsp app